--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 *{
-  width: 1440px;
+  /*width: 1440px;*/ /*В мире используют React, чтобы писать код, который будет генерировать страницу под нужды пользователя. Как мне кажется, при таком подходе такие ограничения не уместны.*/
 }
