--- a/src/Components/PersonCard.css
+++ b/src/Components/PersonCard.css
@@ -11,7 +11,7 @@
     border-radius: 7px;
     padding: 10px; /* Добавление отступа внутри контейнера */
     text-align: center;
-    background: #4e4e50;
+    background: #fff;
 }
 .person-card
 .class-text{
