--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,25 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.app-header h1{
-    color:#950740;
-    margin-left: 5%;
-    cursor: default;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+nav .menu_back{
+    background-color:black;
+    height:50px;
+    width:100%;
+    position: absolute;
+    opacity: .5;
+}
+
+menu
+{
+    position:fixed;
+    width:100%;
+    height: 50px;
+    position:relative;
+    padding:0 10rem;
+    margin: 0 auto;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+}
+
+nav
+{
+    font-family: Playfair Display;
+    background-image: url('https://i.pinimg.com/originals/1a/93/db/1a93dbed8d5ff8e3b901669d7a5b0445.jpg');
+    max-width:100%;
+    min-height:500px;
+    min-max-height:500px;
+    background-size: cover;
+    background-position:center;
+}
+
+.links{
+    list-style-type: none;
+    display: flex;
+    gap:2rem;
+    margin-left:5rem;
 }
 .app-header a{
+    text-decoration:none;              /*menu text*/
     color:#c3073f ;
+    font-size:1.5rem;
 }
-.app-header a:hover
+.app-header a:hover              /*при наведении на меню*/
 {
-    border-bottom: #6f2232 2px solid;
+    color:white;
     box-sizing: border-box;
+    cursor:pointer;
+    text-decoration: underline;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
-nav{
-    height: calc(1.5em*2);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-bottom: 10px;
+
+task_name{
+    position:relative;
+    top:12rem;
+    left:35rem;
+    font-weight:bold;
+    font-size: 3rem;
 }
-nav a{
-    margin-left: 10%;
-    font-size: 1.5em;
+
+task_name p:hover{
+    color:#c3073f;
+    -webkit-transition: all 0.8s ease;
+        transition: all 0.8s ease;
 }
+
