--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 *{
-  /*width: 1440px;*/ /*В мире используют React, чтобы писать код, который будет генерировать страницу под нужды пользователя. Как мне кажется, при таком подходе такие ограничения не уместны.*/
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
