--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -7,70 +7,115 @@
     box-sizing:border-box;
 }
 
-nav .menu_back{
-    background-color:black;
+. app_header{
+    position: absolute;
+    height:45px;
+}
+
+.menu_back{
+    background-color:#5D181D;
     height:50px;
     width:100%;
     position: absolute;
-    opacity: .5;
 }
 
-menu
+.nav img{
+     margin-left:5%;
+     margin-right:30%;
+     width:45px;
+}
+
+.lang_ch img{
+    margin-left:10%;
+    height:30px;
+    width:30px;
+    cursor: pointer;
+}
+
+.toggle_btn{
+    display:none;
+        height:15px;
+        width: 10px;
+        margin-left:30%;
+        cursor:pointer;
+}
+.toggle_img{
+    background-color:blue;
+}
+
+.toggle_img : hover{
+   /* background-color:green;*/
+}
+
+.nav .links{
+      list-style-type: none;
+      color:white;
+      font-size:1.5rem;
+      display: flex;
+      gap:2rem;
+      margin-left:5rem;
+}
+
+.app-header a:hover
 {
-    position:fixed;
+    color:#868686;
+    cursor:pointer;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.app-header{
+    position:relative;
+    padding:0 2rem;
+}
+
+.nav{
     width:100%;
     height: 50px;
-    position:relative;
-    padding:0 10rem;
+    max-width:1440px;
     margin: 0 auto;
     display:flex;
     align-items:center;
-    justify-content:space-between;
+    justify-content: space-around;
 }
 
-nav
+
+
+.dropdown_menu {
+    display: none;
+    width:150px;
+    height:0px;
+    background-color:green;
+    position:absolute;
+    right: 5%;
+    top:60px;
+    background-color: rgba(255,255,255, 0.1);
+    background-filter: blur(15px);
+    border-radius:10px;
+    overflow:hidden;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown_menu.open{
+    height:200px;
+}
+
+.dropdown_menu li
 {
-    font-family: Playfair Display;
-    background-image: url('https://i.pinimg.com/originals/1a/93/db/1a93dbed8d5ff8e3b901669d7a5b0445.jpg');
-    max-width:100%;
-    min-height:500px;
-    min-max-height:500px;
-    background-size: cover;
-    background-position:center;
-}
-
-.links{
     list-style-type: none;
+    color:black;
+    font-size:1.2rem;
+    padding:0.2rem;
     display: flex;
-    gap:2rem;
-    margin-left:5rem;
+    align-items:center;
+    justify-content:center;
 }
-.app-header a{
-    text-decoration:none;              /*menu text*/
-    color:#c3073f ;
-    font-size:1.5rem;
-}
-.app-header a:hover              /*при наведении на меню*/
+
+@media (max-width: 1200px)
 {
-    color:white;
-    box-sizing: border-box;
-    cursor:pointer;
-    text-decoration: underline;
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    .nav .links, .lang_ch img {display: none;}
+    .toggle_img {display:block;}
+    .dropdown_menu {
+        display: block;
+    }
 }
-
-task_name{
-    position:relative;
-    top:12rem;
-    left:35rem;
-    font-weight:bold;
-    font-size: 3rem;
-}
-
-task_name p:hover{
-    color:#c3073f;
-    -webkit-transition: all 0.8s ease;
-        transition: all 0.8s ease;
-}
-
