--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   justify-items: flex-start ;
   justify-content: space-between;
+
 }
 .person-cards{
   display: flex;
@@ -31,4 +32,9 @@ code {
 a {
   text-decoration: none; /* Убрать подчеркивание ссылки */
   color: inherit; /* Использовать цвет текста из родительского элемента */
+}
+
+.Header{
+    position:sticky;
+    top: 0;
 }
