--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -4,12 +4,22 @@
     /*display: grid;*/
     /*grid-template-columns: 1fr 1fr 1fr;*/
     justify-content:space-evenly;
+    flex-wrap: wrap;
 }
 
-dev_text{
+.app-footer{
+    margin: auto;
+    width:90%;
+    box-sizing:border-box;
+        padding: 10px 20px 10px 20px;
+        border: 2px solid #5d191d;
+        border-radius:6px;
+}
+
+.app-footer h1{
     color:#670101;
     font-weight:bold;
     font-size:1.5rem;
-    margin-left:3.5rem;
-    margin-bottom:3rem;
+    text-align:center;
+    margin-bottom:3vh;
 }
