--- a/src/Components/Info.css
+++ b/src/Components/Info.css
@@ -2,22 +2,43 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
+    width:100%;
+}
+
+.wall {
+    background-image: url('https://i.pinimg.com/originals/1a/93/db/1a93dbed8d5ff8e3b901669d7a5b0445.jpg');
+    position:relative;
+    min-height:500px;
+    max-height:500px;
+    background-size: cover;
+    background-position:center;
+
+}
+
+.wall h1{
+    padding-left:45%;
+    padding-top:15rem;
+    width:50%;
+    text-align: left;
+    font-size: 7vh;
+    color:white;
+    height:auto;
+    font-weight:bold;
 }
 
 .red_line{
-width: 100%;
-height:15px;
-background-color:#670101;
-opacity: .8;
+    width: 100%;
+    height:15px;
+    background-color:#5d151d;
 }
 
 .info_wrapper{
-    width:45rem;
+    width:75%;
     margin-top:5rem;
     margin-bottom:10rem;
     margin-left:auto;
     margin-right:auto;
-    height:20rem;
+    height:auto;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -27,7 +48,7 @@ opacity: .8;
 .info_wrapper p{
     margin-left:auto;
     margin-right:auto;
-    width: 40rem;
+    width:100%;
     text-align:center;
     color:black;
     font-size:1.2rem;
@@ -37,9 +58,9 @@ opacity: .8;
     margin-left:auto;
     margin-right:auto;
     margin-bottom:1rem;
-    width: 40rem;
+    width:100%;
     text-align:center;
     font-weight:bold;
-    color:#670101;
+    color:#5d151d;
     font-size:1.4rem;
 }
