--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,15 +1,18 @@
 
- .persons_info {
-    height:10rem;
-    width:20rem;
+/* .persons_info {
+    width:85%;
+    height:auto;
     margin-left:auto;
     margin-right:auto;
- }
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content: space-around;
+ }*/
 
 .person_wrapper {
     width:90%;
-    min-height:35rem;
-    max-height:40rem;
+    height:auto;
     margin-left:auto;
     margin-right:auto;
     box-sizing:border-box;
@@ -24,7 +27,7 @@
     text-align:center;
     margin-bottom:1rem;
     font-weight:bold;
-    font-size:1.8rem;
+    font-size:1.7rem;
 
  }
 
@@ -38,13 +41,31 @@
     width:80%;
     margin-left:auto;
     margin-right:auto;
-    height:30rem;
+    height:auto;
     display:flex;
+    flex-direction:column;
     align-items:center;
     justify-content:space-between;
  }
 
- .persons_info persons_bio{
+ .persons_info img{
+     max-height:15rem;
+     width:auto;
+  }
+.persons_bio {
+    text-align:center;
+    color:black;
+}
+
+.persons_bio h3{
+    font-size: 3vh;
+}
+
+.persons_bio h4{
+    font-size:2vh;
+}
+
+ /*.persons_info persons_bio{
     text-align:left;
     height:26.8rem;
     display:flex;
@@ -65,11 +86,10 @@
     height:30rem;
     width:auto;
  }
-
+*/
  button{
     margin-top: 1rem;
-    margin-left:2rem;
-    width:100%;
+    width:60%;
     color:black;
     font-weight:bold;
     padding: 8px 22px;
