--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -8,19 +8,69 @@
 }
 
 nav .menu_back{
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
     background-color:black;
     height:50px;
-    width:100%;
-    position: absolute;
+    /*width:100%;*/
+    /*position: absolute;*/
     opacity: .5;
 }
+.lang_ch{
+    position: relative;
+    display: flex;
+    width: 35px;
+    height: 35px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.globe:hover{
+    max-width:100%;
+    height: 35px;
+}
 
+.lang-ch-menu button{
+    height: 25px;
+    width: 25px;
+    margin-right: 5px;
+    color:#c3073f;
+    text-decoration: none;
+}
+button:hover{
+    text-decoration: none;
+    /*color: initial; !* Сбрасывает цвет текста на начальное значение *!*/
+    background-color: initial; /* Сбрасывает цвет фона на начальное значение */
+    border: none;
+}
+.lang-ch-menu {
+    position: absolute;
+    top: 45px;
+    background-color: #000000;
+    border-radius: 7px;
+    border: 1px solid #524646;
+    opacity: 0.8;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 5px;
+    display: flex;
+    flex-direction: row;
+}
 menu
 {
-    position:fixed;
-    width:100%;
-    height: 50px;
-    position:relative;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /*position:fixed;*/
+    /*width:100%;*/
+    /*height: 50px;*/
+    /*position:relative;*/
     padding:0 10rem;
     margin: 0 auto;
     display:flex;
@@ -45,6 +95,7 @@ nav
     gap:2rem;
     margin-left:5rem;
 }
+
 .app-header a{
     text-decoration:none;              /*menu text*/
     color:#c3073f ;
