--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  margin-top: 50px;
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -33,7 +34,9 @@ a {
   text-decoration: none; /* Убрать подчеркивание ссылки */
   color: inherit; /* Использовать цвет текста из родительского элемента */
 }
+main{
 
+}
 .Header{
     position:sticky;
     top: 0;
