--- a/src/Components/Info.css
+++ b/src/Components/Info.css
@@ -18,6 +18,7 @@
 .wall h1{
     padding-left:45%;
     padding-top:15rem;
+    padding-bottom:1.5rem;
     width:50%;
     text-align: left;
     font-size: 7vh;
@@ -51,7 +52,7 @@
     width:100%;
     text-align:center;
     color:black;
-    font-size:1.2rem;
+    font-size:1.3rem;
 }
 
 .info_wrapper h1{
