--- a/src/Components/Hrono.css
+++ b/src/Components/Hrono.css
@@ -9,3 +9,16 @@
     padding: 20px; /* Отступы */
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Тень */
 }
+
+h3
+{
+    width:50%;
+    font-weight:bold;
+    color:#5d151d;
+    font-size:3vh;
+}
+
+p{
+    text-align:justify;
+    font-size:2.5vh;
+}
