--- a/src/Components/PersonCard.css
+++ b/src/Components/PersonCard.css
@@ -1,34 +1,52 @@
 
 .person-card {
-    width: 650px;
-    height: 650px;
+    width: 35%;
+    max-height: 50rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border: 2px solid #4e4e50;
     border-radius: 7px;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     background: #fff;
     color:#000;
+    flex-wrap: wrap;
+}
+
+.person-card:hover{
+
+    background: radial-gradient(white 70%, #E1BEC0);
+     -webkit-transition: all 2s ease;
+        transition: all 2s ease;
 }
 
 .pers-day-card .class-text {
-    text-align: center;
-    width: 450px;
+    align-items: center;
+    width: 100%;
+    font-size:
 }
 
 .class-text h2 {
-    width: 650px;
+    font-weight: bold;
+    color:#5D181D;
+    font-size: 4vh;
 }
 
 p {
-    width: 650px;
+     color:black;
+     font-size: 3vh;
+     text-align:center;
 }
 .person-card img{
-    height: 500px;
+    width:80%;
+    height:auto;
 
+}
+
+.button{
+    text-align:center;
 }
 
