--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,4 +1,3 @@
-
 /* .persons_info {
     width:85%;
     height:auto;
@@ -32,13 +31,12 @@
  }
 
 .person_wrapper h1:hover{
-     color:#670101;
+     color:#5D181D;
      -webkit-transition: all 0.3s ease;
      transition: all 0.3s ease;
 }
 
  .persons_info {
-    width:80%;
     margin-left:auto;
     margin-right:auto;
     height:auto;
@@ -53,11 +51,19 @@
      width:auto;
   }
 .persons_bio {
+    width:90%;
     text-align:center;
     color:black;
 }
 
+.persons_bio h2{
+    font-weight: bold;
+    color:#5D181D;
+    font-size: 3vh;
+}
+
 .persons_bio h3{
+    width:90%;
     font-size: 3vh;
 }
 
@@ -65,31 +71,11 @@
     font-size:2vh;
 }
 
- /*.persons_info persons_bio{
-    text-align:left;
-    height:26.8rem;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-around;
-    margin-left:2rem;
-    color:black;
-    font-size:1.2rem;
-    border-left: 4px solid #670101;
-    padding: 10px;
- }
 
- persons_bio p{
-    font-size:1rem;
- }
-
- .persons_info img{
-    height:30rem;
-    width:auto;
- }
-*/
  button{
     margin-top: 1rem;
     width:60%;
+    height:2.5rem;
     color:black;
     font-weight:bold;
     padding: 8px 22px;
@@ -98,10 +84,11 @@
     transition:all 0.2s ease;
  }
 
-    button:active{
+button:hover{
     background:#670101;
     opacity: .7;
     transform:scale(0.96);
+    color:white;
  }
 
  right_side{
