--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -7,15 +7,12 @@
     box-sizing: border-box;
 }
 
-. app_header{
-    position: absolute;
-    height:50px;
-}
 
 .menu_back{
     background-color:#5D181D;
     height:55px;
     width:100%;
+    }
 header {
     z-index: 1000;
     position: fixed;
@@ -24,8 +21,7 @@ header {
     width: 100%;
     background-color: #5D181D;
     height: 50px;
-    padding: 0 2rem;
-
+ /*   padding: 0 2rem;*/
 }
 
 .lang_ch {
@@ -129,10 +125,6 @@ button:hover {
     transition: all 0.4s ease;
 }
 
-.app-header{
-    position:relative;
-    padding:0 2rem;
-}
 
 .nav {
     width: 100%;
