--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -6,8 +6,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
 .menu_back{
     background-color:#5D181D;
     height:55px;
@@ -33,12 +31,16 @@ header {
     text-align: center;
     justify-content: center;
 }
-
-.globe:hover {
-    max-width: 100%;
-    height: 35px;
+.lang-ch-menu{
+    width: 110px;
+    height: 67px;
+    left:-61px;
 }
 
+.lang_ch img:hover{
+    height: 35px;
+    position: relative;
+}
 .lang-ch-menu button {
     height: 25px;
     width: 25px;
@@ -85,12 +87,12 @@ button:hover {
     width: 45px;
 }
 
-.lang_ch img {
-    margin-left: 10%;
-    height: 30px;
-    width: 30px;
-    cursor: pointer;
-}
+/*.lang_ch img {*/
+/*    margin-left: 10%;*/
+/*    height: 30px;*/
+/*    width: 30px;*/
+/*    cursor: pointer;*/
+/*}*/
 
 .toggle_btn {
     display: none;
