--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -11,7 +11,7 @@
     margin: auto;
     margin-bottom:2rem;
     margin-top:2rem;
-    width:90%;
+    max-width:95%;
     box-sizing:border-box;
         padding: 10px 20px 10px 20px;
         border: 2px solid #5d191d;
@@ -22,7 +22,7 @@
 .app-footer h1{
     color:#670101;
     font-weight:bold;
-    font-size:1.5rem;
+    font-size: 4vw;
     text-align:center;
     margin-bottom:3vh;
 }
