--- a/src/Components/Hrono.css
+++ b/src/Components/Hrono.css
@@ -1,13 +1,13 @@
 .vertical-timeline-element img{
-    height: 50px; /* Задайте желаемую высоту */
-    width: auto; /* Разрешите ширину подстраиваться автоматически */
+    height: 50px;
+    width: auto;
 }
 .vertical-timeline-element-content {
-    background: #f7f7f7; /* Цвет фона */
-    color: #333; /* Цвет текста */
-    border-radius: 10px; /* Скругление углов */
-    padding: 20px; /* Отступы */
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Тень */
+    background: #f7f7f7;
+    color: #333;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 h3
@@ -15,10 +15,10 @@ h3
     width:50%;
     font-weight:bold;
     color:#5d151d;
-    font-size:3vh;
+    font-size:3vw;
 }
 
 p{
     text-align:justify;
-    font-size:2.5vh;
+    font-size:2.5vw;
 }
