--- a/src/Pages/ListOfPerson.css
+++ b/src/Pages/ListOfPerson.css
@@ -1,26 +1,26 @@
 .main h1{
-    margin-top: 5rem;
-    margin-bottom:1rem;
+    margin-top: 10rem;
+    margin-bottom:2rem;
     color:#5d181d;
-    font-size:5vh;
+    font-size:4vw;
     font-weight:bold;
     width:100%;
     text-align:center;
 }
 
 .search {
-  width: auto;
-  float: right;
-  margin-right: 2rem;
+  width: 60%;
+  margin: 0 auto;
+  /*margin-right: 2rem;*/
   color:white;
-  display:flex;
+  align-items:center;
   display-items:center;
-  justify-content:space-between;
   margin-bottom:2rem;
 }
+
 input {
-  width: 250px;
-  height: 42px;
+  width: 100%;
+  height: 5vh;
   padding-left: 15px;
   border-radius: 42px;
   border: 2px solid #5d181d;
@@ -31,7 +31,7 @@ input {
   color:#5d181d;
 }
 input:focus {
-  width: 300px;
+  width: 30%;
 }
 search-button {
   width: 42px;
