--- a/src/Pages/PersonInfo.css
+++ b/src/Pages/PersonInfo.css
@@ -1,8 +1,11 @@
 .cont {
+    width:100%;
+    height:auto;
     display:flex;
     align-items:center;
     justify-content:space-around;
     margin-top:5rem;
+    flex-wrap: wrap;
 }
 
 .personal-info
@@ -38,4 +41,8 @@
      font-weight:bold;
      color:white;
      font-size:5vh;
+}
+
+.container-slider{
+    margin-top:5rem;
 }
