--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -6,13 +6,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
-.menu_back{
-    background-color:#5D181D;
-    height:55px;
-    width:100%;
-    }
 header {
     z-index: 1000;
     position: fixed;
@@ -105,7 +98,7 @@ button:hover {
 
 .app-header a {
     text-decoration: none;
-    color: #c3073f;
+    color: white;
     font-size: 1.5rem;
 }
 
@@ -118,8 +111,9 @@ button:hover {
     margin-left: 5rem;
 }
 
+
 .app-header a:hover {
-    color: #868686;
+    background-color: back;
     cursor: pointer;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
@@ -136,46 +130,3 @@ button:hover {
     justify-content: space-around;
 }
 
-.dropdown_menu {
-    display: none;
-    width: 150px;
-    height: 0px;
-    background-color: green;
-    position: absolute;
-    right: 5%;
-    top: 60px;
-    background-color: rgba(255, 255, 255, 0.1);
-    background-filter: blur(15px);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.dropdown_menu.open {
-    height: 200px;
-}
-
-.dropdown_menu li {
-    list-style-type: none;
-    color: black;
-    font-size: 1.2rem;
-    padding: 0.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-@media (max-width: 1200px) {
-    .nav .links,
-    .lang_ch img {
-        display: none;
-    }
-
-    .toggle_img {
-        display: block;
-    }
-
-    .dropdown_menu {
-        display: block;
-    }
-}
