--- a/src/Components/PersonCard.css
+++ b/src/Components/PersonCard.css
@@ -25,7 +25,7 @@
 .pers-day-card .class-text {
     align-items: center;
     width: 100%;
-    font-size:
+    /*font-size:*/
 }
 
 .class-text h2 {
