--- a/src/Components/Info.css
+++ b/src/Components/Info.css
@@ -23,7 +23,7 @@
     max-font-size:5vw;
     color:white;
     padding-left:10%;
-    padding-top:auto;
+    padding-top:0;
     padding-bottom:5%;
     font-weight:bold;
 }
