--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -58,7 +58,7 @@ button:hover {
     background-color: initial;
     border: none;
 }
-
+/*еуые*/
 .lang-ch-menu {
     position: absolute;
     top: 45px;
